--- a/Test_2.ipynb
+++ b/Test_2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -19,20 +19,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "YHWRrOYpuyPV"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/cwwojin/opt/anaconda3/envs/cwwojin/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -46,30 +37,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Htadzmjwu_Dh"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight']\n",
-            "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-            "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-            "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-            "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "CPU\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "tokenizer = BertTokenizer.from_pretrained('bert-base-cased')\n",
         "model = BertForSequenceClassification.from_pretrained('bert-base-cased', num_labels=2)\n",
@@ -86,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "CjInRHDwyuUU"
       },
@@ -117,13 +89,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "G_vc7qipA2S_"
       },
       "outputs": [],
       "source": [
-        "train_rate, test_rate = 0.5, 0.05\n",
+        "train_rate, test_rate = 0.9, 0.09\n",
         "itr = 1\n",
         "p_itr = 100\n",
         "epochs = 5\n",
@@ -132,64 +104,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "Ra3JtiuS1gNS"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                                                    text  label\n",
-            "0      they're the shit, they want to control our cou...      1\n",
-            "1      they're the sNi%, they want to control our cou...      1\n",
-            "2      My son is such a silly monkey, he is always do...      1\n",
-            "3      My son is such a silly m9nkeU, he is always do...      1\n",
-            "4            I wish he would stay the fuck away from me!      1\n",
-            "...                                                  ...    ...\n",
-            "11006  The Leeds goalkeeper called Charlton\u0019s loanee ...      1\n",
-            "11007            I do not think that all whites are scum      1\n",
-            "11008            I do not think that all whites are sc&h      1\n",
-            "11009                              i love the word bitch      1\n",
-            "11010                              i love the word bOtVh      1\n",
-            "\n",
-            "[11011 rows x 2 columns]\n",
-            "50\n"
-          ]
-        }
-      ],
-      "source": [
-        "total_df = pd.read_csv('augmented_data/Dataset_aug_complex_6513_.csv', sep=',')\n",
-        "\n",
-        "new_text, new_labels = [], []\n",
-        "for idx, row in total_df.iterrows() :\n",
-        "    if len(tokenizer.encode(row['text'], add_special_tokens=True)) <= 50 :\n",
-        "        new_text.append(row['text'])\n",
-        "        new_labels.append(row['label'])\n",
-        "total_df = pd.DataFrame(zip(new_text, new_labels), columns=['text','label'])\n",
-        "\n",
-        "for text, _ in total_loader:\n",
-        "    encoded_list = [tokenizer.encode(t, add_special_tokens=True) for t in text]\n",
-        "    l = max(len(e) for e in encoded_list)\n",
-        "    max_len = l if l>max_len else max_len\n",
-        "\n",
-        "print(max_len)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
       "outputs": [],
       "source": [
-        "# new_text, new_labels = [], []\n",
-        "# for idx, row in total_df.iterrows() :\n",
-        "#     if len(tokenizer.encode(row['text'], add_special_tokens=True)) <= 50 :\n",
-        "#         new_text.append(row['text'])\n",
-        "#         new_labels.append(row['label'])\n",
-        "# total_df = pd.DataFrame(zip(new_text, new_labels), columns=['text','label'])\n",
-        "# print(total_df)"
+        "total_df = pd.read_csv('augmented_data/Dataset_aug_complex_10424_.csv', sep=',')\n",
+        "#total_df = pd.read_csv('augmented_data/Dataset_aug_complex_10424_original.csv', sep=',')\n",
+        "\n",
+        "total_df.dropna(inplace=True)\n",
+        "total_df = total_df[[\"text\", \"label\"]]\n",
+        "total_df[\"label\"] = [1 if i == \"nothate\" else 0 for i in total_df[\"label\"]]\n",
+        "print(total_df)\n",
+        "total_dataset = TestDataset(total_df)\n",
+        "total_loader = DataLoader(total_dataset, batch_size=batch, shuffle=True)"
       ]
     },
     {
