Spell checker uses Bi-Directional RNN

--- a/Data_Augment.ipynb
+++ b/Data_Augment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +155,14 @@
     "    assert(sum(R)==n)\n",
     "    assert(len(R)==len(augs))\n",
     "\n",
+    "    if random :\n",
+    "        n=1\n",
+    "\n",
     "    for idx, row in train_df_sample.iterrows() :\n",
     "        sentence = row['text']\n",
     "        label = row['label']\n",
+    "        #print(sentence)\n",
+    "        #print(label, [label for i in range(n)])\n",
     "        augmented = []\n",
     "\n",
     "        if random :\n",
@@ -188,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,30 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                      text              original\n",
-      "0                  sidicks             shitdicks\n",
-      "1              baresitcles           breasticles\n",
-      "2     shiafucumo0herfucker  shitfuckmotherfucker\n",
-      "3                 6itcheks              bitchers\n",
-      "4                  cokcsku               cocksuk\n",
-      "...                    ...                   ...\n",
-      "1046          muddekforker          mudderfukker\n",
-      "1047               bstindo             bastinado\n",
-      "1048           cuntboAlonW           cuntbollock\n",
-      "1049             octoupsys             octopussy\n",
-      "1050                  nigu                 niguh\n",
-      "\n",
-      "[1051 rows x 2 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "augs = [aug_char_keyboard, aug_char_ocr, aug_char_random_in, aug_char_random_sub, aug_char_random_swap, aug_char_random_del]\n",
     "\n",
@@ -304,14 +288,12 @@
     "\n",
     "\n",
     "Char_Aug_df = pd.DataFrame(zip(prof_augs, profanities), columns=['text','original'])\n",
-    "\n",
-    "print(Char_Aug_df)\n",
-    "Char_Aug_df.to_csv(\"augmented_data/Dataset_aug_char_{i}.csv\".format(i=len(Char_Aug_df)),sep=',')"
+    "#Char_Aug_df.to_csv(\"augmented_data/Dataset_aug_char_{i}.csv\".format(i=len(Char_Aug_df)),sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -319,16 +301,16 @@
      "output_type": "stream",
      "text": [
       "              text   original\n",
-      "0        sbitdifks  shitdicks\n",
-      "1        shitdKckQ  shitdicks\n",
-      "2        shitdicr8  shitdicks\n",
+      "0        sh&tdicUs  shitdicks\n",
+      "1        shJ$dicks  shitdicks\n",
+      "2        8hitdicrs  shitdicks\n",
       "3        8hitdicrs  shitdicks\n",
-      "4      shCiztdicks  shitdicks\n",
+      "4      schitdicbks  shitdicks\n",
       "...            ...        ...\n",
-      "12607        jiguh      niguh\n",
+      "12607        &iguh      niguh\n",
       "12608        ngiuh      niguh\n",
       "12609        niugh      niguh\n",
-      "12610         niuh      niguh\n",
+      "12610         nigu      niguh\n",
       "12611         nigu      niguh\n",
       "\n",
       "[12612 rows x 2 columns]\n"
@@ -350,7 +332,7 @@
     "Char_Aug_df = pd.DataFrame(zip(prof_augs, new_prof), columns=['text','original'])\n",
     "print(Char_Aug_df)\n",
     "\n",
-    "Char_Aug_df.to_csv(\"augmented_data/Dataset_aug_char_{i}.csv\".format(i=len(Char_Aug_df)),sep=',')"
+    "#Char_Aug_df.to_csv(\"augmented_data/Dataset_aug_char_{i}.csv\".format(i=len(Char_Aug_df)),sep=',')"
    ]
   }
  ],
