--- a/Spell_correction.ipynb
+++ b/Spell_correction.ipynb
@@ -18,9 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from nltk.tokenize import TreebankWordTokenizer\n",
-    "from nltk.corpus import wordnet as wn"
+    "from torch.utils.data import Dataset, DataLoader"
    ]
   },
   {
@@ -175,6 +173,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nltk.tokenize import TreebankWordTokenizer\n",
+    "from nltk.corpus import wordnet as wn\n",
+    "\n",
     "from Spell_correction_model import *\n",
     "\n",
     "wordnetdict = wn.words(lang='eng')\n",
