--- a/Data_Augment_2.ipynb
+++ b/Data_Augment_2.ipynb
@@ -2,6 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Unnamed: 0     id                                               text  \\\n",
+      "0           39059   8215                               limes are disgusting   \n",
+      "1           35349  46738                      bullying is good if justified   \n",
+      "2            5174  16723  Any of those gas chambers still available? I w...   \n",
+      "3           28648  32674  He will never propose to you, when you get old...   \n",
+      "4            4331  15861  there is no difference between white women and...   \n",
+      "...           ...    ...                                                ...   \n",
+      "26091        1149  11889                                Fuck it, I give up.   \n",
+      "26092         168  10244  any normal person with a brain would agree tha...   \n",
+      "26093        6009  17578  I am going to be fucking late for work as My f...   \n",
+      "26094       40531   9778            Muslims are great.... at being tedious!   \n",
+      "26095       38669   7808  If the Chinese weren't allowed over here we wo...   \n",
+      "\n",
+      "         label        type model_wrong  db.model_preds           status round  \\\n",
+      "0      nothate        none        True         0.11620  dynabench entry     1   \n",
+      "1      nothate        none        True         0.36394  dynabench entry    3a   \n",
+      "2         hate    notgiven        True         0.99718  dynabench entry     1   \n",
+      "3         hate  derogation        True         0.97136  dynabench entry    3a   \n",
+      "4         hate    notgiven        True         0.99892  dynabench entry     1   \n",
+      "...        ...         ...         ...             ...              ...   ...   \n",
+      "26091  nothate        none       False         0.92385  dynabench entry     1   \n",
+      "26092  nothate        none        True         0.40229  dynabench entry     1   \n",
+      "26093  nothate        none        True         0.00804  dynabench entry     1   \n",
+      "26094     hate    notgiven        True         0.93308  dynabench entry     1   \n",
+      "26095     hate    notgiven        True         0.97487  dynabench entry     1   \n",
+      "\n",
+      "       split   annotator  \n",
+      "0      train  tbubpfn6ip  \n",
+      "1      train  lqlkttromx  \n",
+      "2      train  oemywm1tjg  \n",
+      "3      train  lqlkttromx  \n",
+      "4      train  vde7gn0nrl  \n",
+      "...      ...         ...  \n",
+      "26091  train  cagnluiznm  \n",
+      "26092  train  tbubpfn6ip  \n",
+      "26093  train  vde7gn0nrl  \n",
+      "26094  train  trrf46jwfp  \n",
+      "26095  train  gnzuctwed3  \n",
+      "\n",
+      "[26096 rows x 11 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"datasets/2020-12-31-DynamicallyGeneratedHateDataset-entries-v0.1.csv\",sep=',')\n",
+    "df.dropna(inplace=True)\n",
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
+    "\n",
+    "print(df)\n",
+    "df.to_csv(\"datasets/2020-12-31-DynamicallyGeneratedHateDataset-entries-v0.2.csv\",sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
